fixed uneven parantheses showing params suggestion

--- a/src/client/views/nodes/ScriptingBox.scss
+++ b/src/client/views/nodes/ScriptingBox.scss
@@ -94,6 +94,7 @@
                     width: 100%;
                     text-align: left;
                     outline: none;
+                    overflow-y: scroll;
                 }
 
                 .rta__entity:hover {
